# PyTerrainMap

./: .gitignore  AI_INTEGRATION.md  ARCHITECTURE.md  ARCHITECTURE_BOUNDARIES.md  ARCHITECTURE_COMPLETE_WEEK19.md  AUTONOMOUS_EXPLORATION_DESIGN.md  BANDWIDTH_OPTIMIZATION.md  BUILD_PRIORITIES.md  Cargo.toml  DATA_INTEGRITY.md  DOCUMENTATION_INDEX.md  GETTING_STARTED.md  IMPLEMENTATION_ROADMAP.md  INSTALLATION.md  KNOWN_ISSUES.md  LAYERED_CACHING_ARCHITECTURE.md  LICENSE  OSS_POLICY.md  PARALLEL_INFERENCE_ARCHITECTURE.md  PHASE_8_DESIGN.md  PREDICTIVE_CACHING_ARCHITECTURE.md  PRODUCTION_STORAGE_ARCHITECTURE.md  PRODUCT_VISION.md  PYPROJECT_SETUP.md  PYTHON_BINDINGS.md  README.md  READY_TO_BUILD.md  REPRESENTATION_TYPE_SYSTEM.md  ROS_BRIDGE_ARCHITECTURE.md  ROS_BRIDGE_DELIVERY.md  ROS_BRIDGE_IMPLEMENTATION_COMPLETE.md  ROS_MOVEIT_INTEGRATION.md  SECURITY_AUDITABILITY_ARCHITECTURE.md  SESSION_WEEK19_COMPLETE.md  SIMULATION_INTEGRATION.md  TASKS.md  TEMPORAL_INTEGRATION_GUIDE.md  TEMPORAL_NORMALIZATION.md  UNIVERSAL_ROBOT_INTEROPERABILITY.md  VISION.md  (+2 more)
docs/: GAUSSIAN_SPLATTING_GPU_ACCELERATION.md  GAUSSIAN_SPLATTING_GUIDE.md
pyterrainmap/: okf_sensor_profiles.py
python/examples/: basic_analysis.py
python/pyterrain_map/: __init__.py  api.py  cli.py  py.pyi  setup_wizard.py  statguardian_integration.py
python/pyterrain_map/storage/: __init__.py  adls.py  base.py  gcs.py  local.py  s3.py
python/pyterrain_ros/: __init__.py
python/pyterrain_ros/adapters/: __init__.py  base.py  lidar.py  thermal.py
python/pyterrain_ros/transforms/: __init__.py  coordinate_frames.py  tf_listener.py
quality_contracts/: multi_sensor_consistency.yaml  sensor_calibration.yaml  temporal_coordinates.yaml  terrain_anomalies.yaml
src/: late_arrival.rs  lib.rs  py.rs  py_api.rs  py_gaussian_splatting.rs  types.rs
src/adapters/: data_contracts.rs  mod.rs  pyroboframes_adapter.rs  pyrobovision_adapter.rs
src/anomaly/: mod.rs
src/api/: mod.rs
src/api_tls/: mod.rs
src/caching/: mod.rs
src/cesium_integration/: mod.rs
src/change_detection/: mod.rs
src/cli/: mod.rs
src/data_sources/: mod.rs
src/exploration/: frontier.rs  gaussian_cache_integration.rs  gaussian_frontier_integration.rs  hypotheses.rs  learning.rs  mod.rs  multi_bot_sync.rs  path_planning.rs  patterns.rs  predictions.rs  semantics.rs  statistics.rs  tests.rs
src/export/: mod.rs
src/export_security/: mod.rs
src/fusion/: mod.rs
src/gaussian_splatting/: change_events.rs  core.rs  distance.rs  exploration.rs  fleet_learning.rs  fusion.rs  h3_optimization.rs  lod.rs  memory_pool.rs  mod.rs  objects.rs  observability.rs  passage.rs  prediction.rs  semantic.rs  store.rs  temporal.rs  tests.rs
src/intelligence/: mod.rs
src/parallel_execution/: mod.rs
src/persistence/: mod.rs
src/photogrammetry/: mod.rs
src/predictive_caching/: mod.rs
src/query/: mod.rs
src/reconstruction_3d/: mod.rs
src/reference_images/: mod.rs
src/security/: mod.rs
src/slam/: mod.rs
src/spatial/: mod.rs
src/spatial_reasoning/: mod.rs
src/storage/: backends.rs  federation.rs  mod.rs  postgres.rs
src/temporal/: mod.rs
src/tiles_3d/: mod.rs
src/traversability/: edges.rs  metadata.rs  mod.rs  nodes.rs  observations.rs  spatial_graph.rs  tests.rs
src/weather_soil/: mod.rs
tests/: test_gaussian_benchmarks.py  test_gaussian_cache_integration_python.py  test_gaussian_frontier_integration_python.py  test_gaussian_observability.py  test_gaussian_splatting_python.py  test_mission_scenarios_python.py  test_multi_bot_sync_python.py  test_python_phase2.py  test_statguardian_integration.py  test_unified_path_planning_python.py  test_warehouse_simulation.py
