[package]
name = "pyterrain-map"
version = "0.0.1"
edition = "2021"
authors = ["Georgi Mammen Mullassery <mullassery@gmail.com>"]
license = "MIT"
description = "Collaborative terrain mapping platform for multi-robot fleets"
repository = "https://github.com/Mullassery/pyterrain-map"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
h3 = "0.11"
geo = "0.27"
geohash = "0.13"
hashbrown = "0.14"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.7"
ndarray = "0.15"
statrs = "0.16"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Optional: Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "postgres"], optional = true }
rusqlite = { version = "0.30", features = ["bundled"], optional = true }

# Optional: Image processing (for PyNoramic)
image = { version = "0.24", optional = true }
opencv = { version = "0.77", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tokio-test = "0.4"

[features]
default = []
database = ["sqlx", "rusqlite"]
imaging = ["image", "opencv"]
pynoramic = ["imaging"]

[lib]
name = "pypanorama"
crate-type = ["cdylib"]

[[bin]]
name = "pypanorama-cli"
path = "src/bin/cli.rs"
required-features = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
