[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyterrain-map"
version = "0.0.1"
description = "Collaborative terrain mapping platform for multi-robot fleets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com"},
]
keywords = ["robotics", "mapping", "sensor-fusion", "collaboration", "terrain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "asyncio-contextmanager>=1.0",
    "httpx>=0.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.20",
]

examples = [
    "rospy>=1.14",  # Optional: ROS integration
    "dimos>=0.0.1",  # Optional: DimOS integration
]

imaging = [
    "opencv-python>=4.8",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/Mullassery/pyterrain-map"
Repository = "https://github.com/Mullassery/pyterrain-map.git"
Documentation = "https://pyterrain-map.readthedocs.io"
Issues = "https://github.com/Mullassery/pyterrain-map/issues"

[tool.maturin]
python-source = "python"
module-name = "pyterrain_map._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=pypanorama --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.coverage.run]
source = ["pypanorama"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
