[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pyterrainMap"
version = "1.3.0"
description = "Production-ready spatial intelligence platform for multi-robot terrain mapping with PyRoboFrames/PyRoboVision ecosystem integration, temporal normalization (5-dimensional), late-arrival handling, multi-model consensus, and full provenance tracking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com"},
]
keywords = ["robotics", "mapping", "sensor-fusion", "collaboration", "terrain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

dependencies = [
    # OSS POLICY: All dependencies MIT, Apache 2.0, or BSD licensed
    # See OSS_POLICY.md for full policy

    # Core data validation (BSD)
    "pydantic>=2.0",

    # HTTP client (BSD)
    "httpx>=0.24",

    # Numerical computing (BSD)
    "numpy>=1.24",

    # Config files (MIT)
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Development tools (all OSS)
dev = [
    "pytest>=7.0",  # MIT
    "pytest-asyncio>=0.21",  # Apache 2.0
    "pytest-cov>=4.0",  # MIT
    "black>=23.0",  # MIT
    "ruff>=0.1",  # MIT
    "mypy>=1.0",  # MIT
]

# Documentation (all OSS)
docs = [
    "sphinx>=6.0",  # BSD
    "sphinx-rtd-theme>=1.0",  # MIT
    "sphinx-autodoc-typehints>=1.20",  # MIT
]

# Image processing for PyNoramic (all OSS)
imaging = [
    "opencv-python>=4.8",  # Apache 2.0
    "Pillow>=10.0",  # HPND
    "scikit-image>=0.21",  # BSD
]

# Database support (all OSS)
database = [
    "SQLAlchemy>=2.0",  # MIT
    "psycopg>=3.1",  # LGPL 3.0
    "duckdb>=0.9",  # MIT
]

# Scientific computing (all OSS)
scientific = [
    "scipy>=1.10",  # BSD
    "scikit-learn>=1.3",  # BSD
    "shapely>=2.0",  # BSD
]

# DO NOT INCLUDE:
# - "rospy" (ROS, complex dependency)
# - "dimos" (not yet released)
# - "tensorflow" (too heavy, proprietary concerns)
# - "torch" (too heavy)
# - "boto3" (AWS-specific)
# - "google-cloud-*" (Google Cloud-specific)
# - "azure-*" (Azure-specific)
# - Any non-OSS packages

[project.urls]
Repository = "https://github.com/Mullassery/pyterrain-map"
Documentation = "https://github.com/Mullassery/pyterrain-map/blob/main/PYTHON_BINDINGS.md"
Issues = "https://github.com/Mullassery/pyterrain-map/issues"

[project.scripts]
pytm = "pyterrain_map.cli:main"
pytm-setup = "pyterrain_map.setup_wizard:main"

[tool.maturin]
module-name = "pyterrain_map"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=pyterrain_map --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.coverage.run]
source = ["pyterrain_map"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
